--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "homepage": "https://devraj1608.github.io/QR_Generator_react",
+
   "name": "qr-generator-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
